# Task-5--Create-Python-package

./: README.md  setup.cfg
src/collections_fw_MAKSYM_GERMAN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_collections.py
