[metadata]
# replace with your username:
name = collections-fw-MAKSYM-GERMAN
version = 0.0.1
author = Maksym German	
author_email = maxgerman@me.com
description = A small example package of collections_fw (unique_chars function)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.foxminded.com.ua/maxgerman/task-5-create-the-python-package
project_urls =
    Bug Tracker = https://git.foxminded.com.ua/maxgerman/task-5-create-the-python-package/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src